--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.2",
-    "react-spring": "^9.7.3"
+    "react-spring": "^9.7.3",
+    "react-tabs": "^6.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
