--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "antd": "^5.16.2",
     "bootstrap": "^5.3.2",
     "font-awesome-icons": "^1.6.0",
     "react": "^18.2.0",
