--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.16.2",
@@ -22,7 +23,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.2",
     "react-spring": "^9.7.3",
-    "react-tabs": "^6.0.2"
+    "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
