--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.16.2",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
     "font-awesome-icons": "^1.6.0",
     "react": "^18.2.0",
